--- a/prj.conf
+++ b/prj.conf
@@ -5,3 +5,10 @@ CONFIG_SENSOR=y
 CONFIG_NRFX_TIMER1=y
 CONFIG_NRFX_TIMER2=y
 CONFIG_NRFX_GPIOTE=y
+
+# NB - TIMER0 is often occupied by BLE
+# Selecting HW timers for the encoders
+CONFIG_ENCODER0_TIMER=1
+CONFIG_ENCODER1_TIMER=2
+
+CONFIG_LOG=y
