new action name and trigger on PR -  on_push.yml

--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -4,11 +4,12 @@ name: CI
 
 on:
   push:
-    branches:
-      - 'main'
+    branches: [master, main]
+  pull_request: 
+    branches: [master, main]
 
 jobs:
-  approved:
+  check_building_errors:
     runs-on: ubuntu-latest
     
     steps:
